Changed .gitignore to ignore all visualStudio specific files and bin/ obj/ directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-DigitsRecognizer/FSharp/bin/
-DigitsRecognizer/FSharp/obj/
-MailCategorizer/FSharp/bin/
-MailCategorizer/FSharp/obj/
-DigitsRecognizer/DigitsRecognizer/obj/
-DigitsRecognizer/DigitsRecognizer/bin/
-DigitsRecognizer/CSharp/obj/
+bin/
+obj/
+.vs/
