--- a/StackOverflowReader/StackOverflowReader/packages.config
+++ b/StackOverflowReader/StackOverflowReader/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Deedle" version="1.2.5" targetFramework="net461" />
   <package id="DynamicInterop" version="0.7.4" targetFramework="net461" />
   <package id="FSharp.Data" version="2.3.2" targetFramework="net461" />
   <package id="R.NET.Community" version="1.6.5" targetFramework="net461" />
