--- a/StackOverflowReader/StackOverflowReader/StackOverflowReader.fsproj
+++ b/StackOverflowReader/StackOverflowReader/StackOverflowReader.fsproj
@@ -51,8 +51,10 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <None Include="Script.fsx" />
+    <None Include="RPlayground.fsx" />
     <Content Include="packages.config" />
+    <None Include="DeedlePlayground.fsx" />
+    <None Include="TypeProvidersPlayground.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Deedle">
