--- a/TypeProvidersPlayground/TypeProvidersPlayground/TypeProvidersPlayground.fsproj
+++ b/TypeProvidersPlayground/TypeProvidersPlayground/TypeProvidersPlayground.fsproj
@@ -7,12 +7,12 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>9a389803-55cd-40b9-ada5-40a2abcf3d2b</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>StackOverflowReader</RootNamespace>
-    <AssemblyName>StackOverflowReader</AssemblyName>
+    <RootNamespace>TypeProvidersPlayground</RootNamespace>
+    <AssemblyName>TypeProvidersPlayground</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Name>StackOverflowReader</Name>
+    <Name>TypeProvidersPlayground</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,7 +22,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Debug\StackOverflowReader.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\TypeProvidersPlayground.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,7 +31,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <DocumentationFile>bin\Release\StackOverflowReader.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\TypeProvidersPlayground.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
