--- a/BikesAndMen/BikesAndMen/BikesAndMen.fsproj
+++ b/BikesAndMen/BikesAndMen/BikesAndMen.fsproj
@@ -51,9 +51,10 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Library1.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
+    <None Include="DataAnalysis.fsx" />
+    <None Include="StochasticGradientDescent.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Charting">
