--- a/BikesAndMen/BikesAndMen/BikesAndMen.fsproj
+++ b/BikesAndMen/BikesAndMen/BikesAndMen.fsproj
@@ -51,7 +51,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <None Include="Script.fsx" />
+    <None Include="BatchGradientDescent.fsx" />
     <Content Include="packages.config" />
     <None Include="DataAnalysis.fsx" />
     <None Include="StochasticGradientDescent.fsx" />
