--- a/BikesAndMen/BikesAndMen/packages.config
+++ b/BikesAndMen/BikesAndMen/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FSharp.Charting" version="0.90.14" targetFramework="net461" />
+  <package id="FSharp.Core" version="4.0.0.1" targetFramework="net461" />
   <package id="FSharp.Data" version="2.3.2" targetFramework="net461" />
+  <package id="MathNet.Numerics.FSharp.Signed" version="3.13.1" targetFramework="net461" />
+  <package id="MathNet.Numerics.MKL.Win-x86" version="2.1.0" targetFramework="net461" />
+  <package id="MathNet.Numerics.Signed" version="3.13.1" targetFramework="net461" />
 </packages>
