--- a/YouAreNotAUniqueSnowflake/YouAreNotAUniqueSnowflake/YouAreNotAUniqueSnowflake.fsproj
+++ b/YouAreNotAUniqueSnowflake/YouAreNotAUniqueSnowflake/YouAreNotAUniqueSnowflake.fsproj
@@ -53,6 +53,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
+    <Compile Include="KMeans.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Charting">
