Principal Component Analysis

--- a/YouAreNotAUniqueSnowflake/YouAreNotAUniqueSnowflake/YouAreNotAUniqueSnowflake.fsproj
+++ b/YouAreNotAUniqueSnowflake/YouAreNotAUniqueSnowflake/YouAreNotAUniqueSnowflake.fsproj
@@ -55,16 +55,27 @@
     <Content Include="packages.config" />
     <Compile Include="KMeans.fs" />
     <None Include="TagsClusterisation.fsx" />
+    <Compile Include="PrincipalComponentAnalysis.fs" />
+    <None Include="PrincipalComponentAnalysis.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Charting">
       <HintPath>..\packages\FSharp.Charting.0.90.14\lib\net40\FSharp.Charting.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <Reference Include="FSharp.Core">
+      <HintPath>..\packages\FSharp.Core.3.1.2.5\lib\net40\FSharp.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="MathNet.Numerics">
+      <HintPath>..\packages\MathNet.Numerics.3.13.1\lib\net40\MathNet.Numerics.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="MathNet.Numerics.FSharp">
+      <HintPath>..\packages\MathNet.Numerics.FSharp.3.13.1\lib\net40\MathNet.Numerics.FSharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
