--- a/TreesAndForests/TreesAndForests/TreesAndForests.fsproj
+++ b/TreesAndForests/TreesAndForests/TreesAndForests.fsproj
@@ -53,6 +53,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
+    <Compile Include="DecisionStump.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Data">
