--- a/BikesAndMen/BikesAndMen/packages.config
+++ b/BikesAndMen/BikesAndMen/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Accord" version="3.3.0" targetFramework="net461" />
+  <package id="Accord.MachineLearning" version="3.3.0" targetFramework="net461" />
+  <package id="Accord.Math" version="3.3.0" targetFramework="net461" />
+  <package id="Accord.Neuro" version="3.3.0" targetFramework="net461" />
+  <package id="Accord.Statistics" version="3.3.0" targetFramework="net461" />
   <package id="FSharp.Charting" version="0.90.14" targetFramework="net461" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net461" />
   <package id="FSharp.Data" version="2.3.2" targetFramework="net461" />
