--- a/DigitsRecognizer/FSharp/FSharp.fsproj
+++ b/DigitsRecognizer/FSharp/FSharp.fsproj
@@ -62,6 +62,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
+    <None Include="Logistic.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Accord">
