--- a/DigitsRecognizer/FSharp/FSharp.fsproj
+++ b/DigitsRecognizer/FSharp/FSharp.fsproj
@@ -63,6 +63,7 @@
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
     <None Include="Logistic.fsx" />
+    <None Include="svm.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Accord">
