--- a/DigitsRecognizer/FSharp/FSharp.fsproj
+++ b/DigitsRecognizer/FSharp/FSharp.fsproj
@@ -51,46 +51,52 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
-  <Import Project="..\packages\Accord.3.3.0\build\Accord.targets" Condition="Exists('..\packages\Accord.3.3.0\build\Accord.targets')" />
+  <Import Project="..\packages\Accord.3.4.0\build\Accord.targets" Condition="Exists('..\packages\Accord.3.4.0\build\Accord.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Accord.3.3.0\build\Accord.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Accord.3.3.0\build\Accord.targets'))" />
+    <Error Condition="!Exists('..\packages\Accord.3.4.0\build\Accord.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Accord.3.4.0\build\Accord.targets'))" />
   </Target>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <None Include="Script.fsx" />
-    <Content Include="packages.config" />
     <None Include="Logistic.fsx" />
     <None Include="svm.fsx" />
     <None Include="ann.fsx" />
+    <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Accord">
-      <HintPath>..\packages\Accord.3.3.0\lib\net45\Accord.dll</HintPath>
+      <HintPath>..\packages\Accord.3.4.0\lib\net46\Accord.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Accord" />
     <Reference Include="Accord.MachineLearning">
-      <HintPath>..\packages\Accord.MachineLearning.3.3.0\lib\net45\Accord.MachineLearning.dll</HintPath>
+      <HintPath>..\packages\Accord.MachineLearning.3.4.0\lib\net46\Accord.MachineLearning.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Accord.MachineLearning" />
     <Reference Include="Accord.Math">
-      <HintPath>..\packages\Accord.Math.3.3.0\lib\net45\Accord.Math.dll</HintPath>
+      <HintPath>..\packages\Accord.Math.3.4.0\lib\net46\Accord.Math.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Accord.Math" />
     <Reference Include="Accord.Math.Core">
-      <HintPath>..\packages\Accord.Math.3.3.0\lib\net45\Accord.Math.Core.dll</HintPath>
+      <HintPath>..\packages\Accord.Math.3.4.0\lib\net46\Accord.Math.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Accord.Math.Core" />
     <Reference Include="Accord.Neuro">
-      <HintPath>..\packages\Accord.Neuro.3.3.0\lib\net45\Accord.Neuro.dll</HintPath>
+      <HintPath>..\packages\Accord.Neuro.3.4.0\lib\net46\Accord.Neuro.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Accord.Neuro" />
     <Reference Include="Accord.Statistics">
-      <HintPath>..\packages\Accord.Statistics.3.3.0\lib\net45\Accord.Statistics.dll</HintPath>
+      <HintPath>..\packages\Accord.Statistics.3.4.0\lib\net46\Accord.Statistics.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Accord.Statistics" />
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
